# cea

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE.txt  Makefile  NOTICE.txt  README.md  environment.yml  project.md  pyproject.toml  pytest.ini
.github/workflows/: basic_build.yml  publish_wheels.yml
cmake/: cea_utilities.cmake
data/: thermo.inp
docs/: logo-bw.tex  logo.tex
docs/source/: conf.py  developer_guide.rst  example_index.rst  faq.rst  index.rst  installation.rst  interface_index.rst  quick_start.rst  ref_list.rst  theory.rst
docs/source/examples/: deton_examples.rst  equilibrium_examples.rst  mixture_thermo.rst  python_examples.rst  rocket_examples.rst  sample_plots.rst  shock_examples.rst
docs/source/examples/deton/: example6.rst
docs/source/examples/equilibrium/: example1.rst  example14.rst  example2.rst  example3.rst  example4.rst
docs/source/examples/rocket/: example10.rst  example11.rst  example12.rst  example13.rst  example8.rst  example9.rst
docs/source/examples/shock/: example7.rst
docs/source/interfaces/: c_api.rst  fortran_api.rst  legacy_interface.rst  python_api.rst
samples/: simple_hp.inp
scripts/: develop.sh
source/: CMakeLists.txt  atomic_data.f90  cea.f90  database_compile.f90  derivatives.f90  derivatives_test.pf  detonation.f90  detonation_test.pf  equilibrium.f90  equilibrium_test.pf  fits.f90  fits_test.pf  input.f90  input_test.pf  main.f90  mixture.f90  mixture_test.pf  param.f90.in  rocket.f90  rocket_test.pf  shock.f90  shock_test.pf  thermo.f90  thermo_test.pf  transport.f90  transport_test.pf  units.f90
source/bind/: CMakeLists.txt  README.md  libcea.pyx
source/bind/c/: CMakeLists.txt  README.md  bindc.F90  cea.h  cea_enum.h
source/bind/c/samples/: rp1311_example1.c  rp1311_example2.c  rp1311_example3.c  rp1311_example6.c  rp1311_example7.c  rp1311_example8.c  rp1311_example9.c
source/bind/excel/: README.md
source/bind/matlab/: README.md
source/bind/python/: CEA.pyx  README.md  cea_def.pxd
source/bind/python/cea/: __init__.py  constants.py
source/bind/python/cea/data/: thermo.lib
source/bind/python/cea/samples/: ceam_example1.py  example1.py  example10.py  example11.py  example12.py  example13.py  example14.py  example2.py  example3.py  example4.py  example6.py  example7.py  example8.py  example9.py  h2_o2.py  inert_reactants.py  mixture_thermo.py  negative_reactants.py  sample_plots.py
source/bind/python/cea/units/: __init__.py
source/bind/python/tests/: conftest.py  test_init.py  test_mixture.py  test_rocket_smoke.py  test_strings.py  test_validation.py
test/main_interface/: example10.inp  example11.inp  example12.inp  example13.inp  example14.inp  example2.inp  example3.inp  example4.inp  example5.inp  example6.inp  example7.inp  example8.inp  example9.inp  parse_output.py  test_main.py
test/main_interface/reference_output/: example1.out  example10.out  example11.out  example12.out  example13.out  example14.out  example2.out  example3.out  example4.out  example5.out  example6.out  example7.out  example8.out  example9.out
test/main_interface/test_output/: get_output.py
