[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.11", "cython", "numpy>=2", "ninja", "setuptools"]

[project]
name = "cea"
dynamic = ["version"]
description = "Chemical Equilibrium with Applications"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt", "NOTICE.txt"]
authors = [ {name = "Mark Leader", email = "mark.leader@nasa.gov"} ]
requires-python = ">=3.11"
dependencies = ["numpy>=2"]

[tool.scikit-build]
sdist.cmake = false
build-dir = "build/py-build"

[tool.scikit-build.editable]
mode = "redirect"
rebuild = false

[tool.scikit-build.wheel]
install-dir = "cea"
packages = {cea = "source/bind/python/cea"}
exclude = [
        "include",
        "**/cmake",
        "**.a",
        "**/__pycache__",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "source/bind/python/cea/__init__.py"

[tool.scikit-build.cmake]
version = ">=3.19"
args = ["-GNinja",
        "-DCMAKE_BUILD_TYPE=Release",
        "-DCEA_BUILD_TESTING=OFF"]
